deploy/retrieveUnpackaged/objects/Technical_Overview__c.object
<CustomObject>
    <description>Used by SE&apos;s or LT&apos;s to provide</description>
    <fields>
        <fullName>AD_Domain_Name__c</fullName>
        <inlineHelpText>Enter AD Domain Name if &quot;Customer Active Directory&quot; has been checked.</inlineHelpText>
        <label>AD Domain Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Technical Overview</relationshipLabel>
        <relationshipName>R00N50000001nyYtEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acct_Number__c</fullName>
        <formula>Account_Name__r.CORE_Account_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Directory_Notes__c</fullName>
        <label>Active Directory Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Configuration_Notes__c</fullName>
        <label>Additional Configuration Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Configuration__c</fullName>
        <label>Additional Configuration</label>
        <picklist>
            <picklistValues>
                <fullName>Defrag Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Backup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Symantec AntiVirus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Additional_Software_Notes__c</fullName>
        <label>Additional Software Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Software__c</fullName>
        <label>Additional Software</label>
        <picklist>
            <picklistValues>
                <fullName>BizTalk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomcat</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Continuity_Plan__c</fullName>
        <inlineHelpText>Describe the customer’s disaster recovery plans (e.g. manual failover of database from DFW to IAD (log shipping), automatic failover of DNS for website using a third-party DNS provider, etc.).</inlineHelpText>
        <label>Business Continuity Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cabinet_Location__c</fullName>
        <label>Cabinet Location</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Notes__c</fullName>
        <label>Compliance Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Active_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Active Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Location__c</fullName>
        <label>DC Location</label>
        <picklist>
            <picklistValues>
                <fullName>Weston Data Center (SAT1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegas Data Center (SAT2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dulles Data Center (IAD1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas/Fort Worth (DFW1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London (LON1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London (LON2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slough (LON3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong (HKG)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Database_Configuration__c</fullName>
        <inlineHelpText>Describe any technologies (e.g. clustering, mirroring, log shipping, service broker, etc.) that the customer is using on their database servers.</inlineHelpText>
        <label>Database Configuration</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Business_Overview__c</fullName>
        <inlineHelpText>Describe what the customer uses their Rackspace configuration for (e.g. public facing website, internal accounting apps, etc.).</inlineHelpText>
        <label>General Business Overview</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HIPPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HIPPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Availability_Notes__c</fullName>
        <label>High Availability Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>High_Availability__c</fullName>
        <label>High Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Full HA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redundant Firewalls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redundant Load Balancers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intensive_Shared_Active_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intensive (Shared) Active Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mail_Configuraiton__c</fullName>
        <inlineHelpText>Describe the customer’s email needs (e.g. outbound only, inbound/outbound Exchange, etc.) and any specific configuration details.</inlineHelpText>
        <label>Mail Configuraiton</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Network_Configuration__c</fullName>
        <inlineHelpText>Describe any non-standard network configurations (e.g. an additional local network, use of Windows Firewall, etc.) or configuration notes (e.g. network ranges for load balancer VIPs and services, etc.). Include any collocated network devices.</inlineHelpText>
        <label>Network Configuration</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Major_Incidents__c</fullName>
        <inlineHelpText>Describe any major issues that the customer has had previously (either at Rackspace or a previous provider).</inlineHelpText>
        <label>Past Major Incidents</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAS_70__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAS 70</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Overview__c</fullName>
        <label>Technical Overview</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Technical Overview</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Overview Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Overview</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>